tests/paczka1/fuzzy1/71719869.err
Error in line 13: 8U5G A203 53,3
Error in line 7: qjHrsGtY S667 247,4
Error in line 24: S667 S667 62,9
Error in line 27: S667 A203 76,1
Error in line 29: PAwMVuxa0 A203 90,3
Error in line 32: PAwMVuxa0 S331 83,1
Error in line 30: S667 S667 21,7
Error in line 35: PAwMVuxa0 S530 53,6
